# study-fastAPI

./: .env_example  .gitignore  README.md  bak2.py  gunicorn.conf.py  ha.py  log.txt  pyproject.toml  readme.md  start_server.sh  test.js  test.py  test_cookie.py  test_header.py
app/: create_app.py  main.py  run_uvicorn.py
app/config/: ai_configs.py  env.py
app/controller/: add_langgraph_approve_route.py  add_langgraph_chat_route.py  add_langgraph_route.py  add_lg_approve_route.py  add_redis_route.py  add_user_route.py
app/middlewares/: app_middlewares.py
app/model/: BasicModel.py  LgApprove.py  LgChat.py  LgMessage.py  LlmOrder.py  LlmProduct.py  user_role.py
app/routers/: test_BackgroundTasks.py  test_depends.py  test_origin_sql_query.py  test_sqlmodel_crud.py  users.py
app/utils/: CryptUtils.py  CustomEmbeddings.py  ModelInputSchema.py  PageQueryParams.py  add_async_route.py  blob_to_value.py  create_module_service.py  db_utils.py  llm_utils.py  next_id.py  postgres_checkpointer.py  postgres_checkpointer2.py  redis_utils.py
bak/: back.py  redis.conf
